--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
       <div class="row">
         <div class="title-row col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark mr-2 ml-3 mt-4 btn-lg"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light mr-2 ml-1.5 mt-4 btn-lg"><i class="fab fa-google-play"></i> Download</button>
+<div class="row">
+  <div class="col-sm-6">
+    <button type="button" class="btn btn-dark mr-1 ml-3 mt-4 btn-lg"><i class="fab fa-apple"></i> Download</button>
+  </div>
+  <div class="col-sm-6">
+    <button type="button" class="btn btn-outline-light mr-2 ml-1 mt-4 btn-lg"><i class="fab fa-google-play"></i> Download</button>
+  </div>
+</div>
         </div>
         <div class="nd-trow col-lg-6 ">
           <div class="relative">
@@ -208,8 +214,14 @@
   <section id="cta">
 
     <h1>Find the True Love of Your Dog's Life Today.</h1>
+<div class="row">
+  <div class="col-sm-6">
     <button type="button" class="btn btn-dark mr-1 ml-3 mt-4 btn-lg"><i class="fab fa-apple"></i> Download</button>
+  </div>
+  <div class="col-sm-6">
     <button type="button" class="btn btn-outline-light mr-2 ml-1 mt-4 btn-lg"><i class="fab fa-google-play"></i> Download</button>
+  </div>
+</div>
 
   </section>
 
