--- a/index.html
+++ b/index.html
@@ -47,22 +47,17 @@
       <div class="row">
         <div class="title-row col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-<div class="row">
-  <div class="col-sm-6">
-    <button type="button" class="btn btn-dark mr-1 ml-3 mt-4 btn-lg"><i class="fab fa-apple"></i> Download</button>
-  </div>
-  <div class="col-sm-6">
-    <button type="button" class="btn btn-outline-light mr-2 ml-1 mt-4 btn-lg"><i class="fab fa-google-play"></i> Download</button>
-  </div>
-</div>
-        </div>
+
+              <button type="button" class="btn btn-dark  btn-lg"><i class="fab fa-apple"></i> Download</button>
+              <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+
+          </div>
+
         <div class="nd-trow col-lg-6 ">
-          <div class="relative">
               <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
           </div>
         </div>
       </div>
-    </div>
   </section>
 
 
@@ -108,7 +103,7 @@
           <em>Beverly, Illinois</em>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <a class="carousel-control-prev rm-2" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
@@ -189,11 +184,9 @@
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$99 <small class="text-muted">/ mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>Pirority Listing</li>
                 <li>Unlimited Matches</li>
                 <li>Unlimited Messages</li>
                 <li>Help center access</li>
-                <li>Unlimited App Usage</li>
               </ul>
               <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
             </div>
@@ -212,17 +205,9 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
     <h1>Find the True Love of Your Dog's Life Today.</h1>
-<div class="row">
-  <div class="col-sm-6">
-    <button type="button" class="btn btn-dark mr-1 ml-3 mt-4 btn-lg"><i class="fab fa-apple"></i> Download</button>
-  </div>
-  <div class="col-sm-6">
-    <button type="button" class="btn btn-outline-light mr-2 ml-1 mt-4 btn-lg"><i class="fab fa-google-play"></i> Download</button>
-  </div>
-</div>
-
+    <button type="button" class="btn btn-dark  btn-lg"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
   </section>
 
 
