--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!-- mobile responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -41,55 +42,48 @@
         </div>
       </nav>
 
-
-
       <!-- Title -->
+
       <div class="row">
         <div class="title-row col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-
-              <button type="button" class="btn btn-dark  btn-lg"><i class="fab fa-apple"></i> Download</button>
-              <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
-
-          </div>
-
-        <div class="nd-trow col-lg-6 ">
-              <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
-          </div>
+          <button type="button" class="btn btn-dark  btn-lg"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
         </div>
-      </div>
-  </section>
-
-
-  <!-- Features -->
-<div class="fbg">
-
-
-  <section id="features">
-    <div class="row">
-      <div class="col-lg-4">
-        <i class="fas fa-check-circle"></i>
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
-      </div>
-      <div class="col-lg-4">
-        <i class="fas fa-bullseye"></i>
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div class="col-lg-4">
-        <i class="fas fa-heart"></i>
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+        <div class="nd-trow col-lg-6 ">
+          <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
       </div>
     </div>
   </section>
-</div>
+
+  <!-- Features -->
+
+  <div class="fbg">
+    <section id="features">
+      <div class="row">
+        <div class="col-lg-4">
+          <i class="fas fa-check-circle"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fas fa-bullseye"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fas fa-heart"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+    </section>
+  </div>
 
   <!-- Testimonials -->
 
   <section id="testimonials">
-
     <div id="carouselExampleControls" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -112,32 +106,22 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
-
-
-
-    <!--  -->
-
   </section>
-
 
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
   </section>
-
 
   <!-- Pricing -->
 
   <section id="pricing">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-
     <div class="container">
       <div class="row mb-3 pt-5 text-center">
         <div class="pricing-collum col-lg-4 col-md-6">
@@ -156,7 +140,6 @@
             </div>
           </div>
         </div>
-
         <div class="pricing-collum col-lg-4 col-md-6">
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
@@ -175,7 +158,6 @@
             </div>
           </div>
         </div>
-
         <div class="pricing-collum col-lg-4 col-md-6">
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
@@ -192,15 +174,9 @@
             </div>
           </div>
         </div>
-
-
       </div>
     </div>
-
-
-
   </section>
-
 
   <!-- Call to Action -->
 
@@ -210,20 +186,17 @@
     <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
   </section>
 
-
   <!-- Footer -->
 
   <footer id="footer">
-<a href="#"></a>
-<a href="#"><i class="fab fa-facebook-f"></i></a>
-<a href="#"><i class="fab fa-twitter"></i></a>
-<a href="#"><i class="fab fa-instagram"></i></a>
-<a href="#"><i class="fab fa-youtube"></i></a>
-<a href="#"><i class="fas fa-envelope"></i></a>
+    <a href="#"></a>
+    <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-youtube"></i></a>
+    <a href="#"><i class="fas fa-envelope"></i></a>
     <p>© OzAmsalem 2019 TinDog</p>
-
   </footer>
-
 
 </body>
 
