--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-youtube"></i></a>
     <a href="#"><i class="fas fa-envelope"></i></a>
-    <p>© OzAmsalem 2019 TinDog</p>
+    <p>© OzAmsalem 2019 tinDog</p>
   </footer>
 
 </body>
