--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
       <div class="row">
         <div class="title-row col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-title">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark  btn-lg"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
         </div>
-        <div class="nd-trow col-lg-6 ">
-          <img class="iphone" src="images/iphone6.png" alt="iphone-mockup">
+        <div class="title-img-row col-lg-6 ">
+          <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
   <!-- Features -->
 
   <div class="fbg">
-    <section id="features">
+    <section id="features" class="container-fluid">
       <div class="row">
         <div class="col-lg-4">
           <i class="fas fa-check-circle"></i>
@@ -86,12 +86,12 @@
   <section id="testimonials">
     <div id="carouselExampleControls" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="container-fluid carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="dog" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="container-fluid carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
@@ -119,7 +119,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="container-fluid">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="container">
@@ -181,7 +181,7 @@
   <!-- Call to Action -->
 
   <section id="cta">
-    <h1>Find the True Love of Your Dog's Life Today.</h1>
+    <h1 class="big-title">Find the True Love of Your Dog's Life Today.</h1>
     <button type="button" class="btn btn-dark  btn-lg"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
   </section>
